...
    <string name="your_12_words">Your 12 Words</string>
    <string name="unlock_wallet">Unlock Wallet</string>
    <string name="create_with_keystore">Create with Keystore</string>
    <string name="create_with_phrase">Create with Phrase</string>
    <string name="content_description_keystore">Provides a helpful description of what a keystore is</string>
    <string name="content_description_phrase">Provides a helpful description of what a phrase is</string>
    <string name="enter_a_strong_password">Enter a Strong Password</string>
    <string name="enter_old_password">Enter Your Old Password</string>
    <string name="safety_description_password">Remember to keep your password and keystore safe. You will need both your password and the keystore file in order to unlock your wallet or recover it in the future. You are solely responsible for managing your credentials. We do not backup your credentials for you!</string>
    <string name="safety_create_phrase">Remember to keep your password and phrase safe. You will need your password and the 12-word phrase in order to unlock your wallet or recover it in the future. You are solely responsible for managing your credentials. We do not backup your credentials for you! By pressing \"Generate Phrase\", you will be taken to the next screen with your 12-word phrase. Keep
    <string name="safety_recover_phrase">Remember to keep your password and phrase safe. You will need your password and the 12-word phrase in order to unlock your wallet or recover it in the future. You are solely responsible for managing your credentials. We do not backup your credentials for you! Keep your information safe and make sure no one is looking over your shoulder.</string>
    <string name="backup_your_credentials">Backup your Credentials</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="safety_confirm_password">By pressing \"confirm\", you acknowledge that you read and understood the disclaimer and will keep your credentials safe. Treat them with care, because they may be responsible for guarding your riches one day.</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="enter_wallet_name">Enter your Wallet\'s Name</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="generate_phrase">Generate Phrase</string>
    <string name="confirm_phrase">Confirm Phrase</string>
    <string name="your_12_word_phrase">Your 12-Word Phrase</string>
    <string name="about_this_step">About this Step</string>
    <string name="about_remember_phrase">This 12-word phrase is used to recover and unlock your wallet. It must be used with the password you provided earlier. By pressing \"Confirm Phrase\" you will be taken to the next screen to reenter these 12 words.</string>
    <string name="help_recycler_empty_phrase">To enter a word type a word in the box below and press \"Add\". You will be able to submit them after entering all 12 words.\n\nTo reorder a word, hold the reorder icon on the right and drag it. To delete a word, swipe it to the right.</string>
    <string name="content_description_navigation_icon">This button allows you to navigate back to the most recent screen you were on</string>
...
    <string name="you_may_finish_restoring_wallet">You may now finish restoring your wallet</string>
    <string name="password_is_incorrect">This password is incorrect</string>
    <string name="error_password_incorrect">This password is incorrect</string>
    <string name="creating_wallet">Creating Wallet…</string>
    <string name="error_incorrect_phrase">One or more of the words is incorrect</string>
    <string name="generating_phrase">Generating your 12-word phrase…</string>
    <string name="enter_phrase">Enter Phrase</string>
    <string name="empty_state_contact">You have no contacts. Contacts allow you to quickly identify people without having to reenter their address.</string>
    <string name="search">Search</string>
    <string name="empty_state_no_contacts">No contacts found</string>
    <string name="unknown">Unknown</string>
    <string name="formatter_recipient">Recipient: %s</string>
    <string name="create_contact">Create Contact</string>
    <string name="content_description_add_contact">Allows you to add this unknown address as a contact</string>
    <string name="default_current_eth_price">Current ETH Price: $760.43</string>
    <string name="default_token_balance">Balance: 100 ETH</string>
    <string name="loading_exchange_rate">Loading exchange rate…</string>
    <string name="ticker_eth">ETH</string>
...
