<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search_contacts"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionLayout="@layout/search_view"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>