...
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="?attr/cardBackgroundColor"
            android:orientation="horizontal">

            <view
                android:id="@+id/search_src_text"
                class="android.support.v7.widget.SearchView$SearchAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/horizontal_margin_small"
                android:layout_marginStart="@dimen/horizontal_margin_small"
...
